base/005-daxe/fuse-005-daxe-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: daxe
  name: daxe
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: daxe
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: daxe
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-daxe:development"
          name: daxe
          ports:
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
