base/005-daxe/fuse-005-daxe-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: daxe
  name: daxe
spec:
  host: "daxe-development.apps.ocp.virt.prospecta.com.au"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: daxe
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
